<resources>
    <string name="app_name">Music Shop</string>
    <string name="person_name">Your name</string>
    <string name="sale">Sale - 30%</string>
    <string name="select_item">Select Item</string>
    <string name="order_price">Order Price</string>
    <string name="quantity">Quantity</string>
    <string name="bax">$</string>
    <string name="nul">0</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="spinner_guitar">guitar</string>
    <string name="spinner_drums">drums</string>
    <string name="spinner_keyboard">keyboard</string>
    <string name="submit_order">SUBMIT ORDER</string>
</resources>